[package]
name = "hades"
version = "0.1.0"
authors = ["Akshay Gupta <kitallis@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
rss = "1.0"
futures = "0.3"
toml = "0.4.2"
serde_yaml = "0.8.17"
tokio = { version = "1.0", features = ["full"] }
url = { version = "2.2.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
structopt = "0.3.17"
slug = "0.1.4"
